--- a/books/zh-CN/001.md
+++ b/books/zh-CN/001.md
@@ -7,4 +7,4 @@
 良子正享受着实验之后的休假，和她可爱的女朋友亚纱美约会。你一开始就帮她们准备好了。因为良子就是个呆瓜，所以你的工作就是帮她解围。你总是在约会的时候帮她一起挑些漂亮衣服。这次是有些复古风的休闲装，带口袋的那种。你能想象穿着它去汽水吧的样子。
 良子长得和你一模一样，（只是没那么聪明），她也不苟言笑。好吧，更准确地说，她看起来就像你的投影，或者你的投影看起来就像她。你曾经使用一个与你同名的投影，良子心中的大英雄，传奇魔法少女克莱丽丝·冯·罗斯。（其实你哪个都不像。你看起来像一块附着在良子脊柱上的纳米技术肉块。
 
-<!-- TODO: 继续 -->
+<!-- TODO: 请继续修改 -->
