--- a/books/zh-CN/001.md
+++ b/books/zh-CN/001.md
@@ -1,10 +1,128 @@
 # 飞向星空 机械幽魂 001
 
-—— 成为克莱丽丝
-
-你是克莱丽丝，Hieronym 所写的《飞向星空》中的角色。你和志筑良子 —— 一位 24 世纪中叶的魔法少女，形影不离。她是俄狄浦斯的英雄，人类的大救星，圆神垂青之人，同时也是剧情的推动者。虽然这一切看上去煞有介事，但你天天和良子待在一块，所以你也知道她是个怎样的榆木脑袋。
+——成为克莱丽丝
+你是克莱丽丝，Hieronym所写的《飞向星空》中的角色。你和志筑良子——一位24世纪中叶的魔法少女，形影不离。她是俄狄浦斯的英雄，人类的大救星，圆神垂青之人，同时也是剧情的推动者。虽然这一切看上去煞有介事，但你天天和良子待在一块，所以你也知道她是个怎样的榆木脑袋。
 
 良子正享受着实验之后的休假，和她可爱的女朋友亚纱美约会。你一开始就帮她们准备好了。因为良子就是个呆瓜，所以你的工作就是帮她解围。你总是在约会的时候帮她一起挑些漂亮衣服。这次是有些复古风的休闲装，带口袋的那种。你能想象穿着它去汽水吧的样子。
-良子长得和你一模一样，（只是没那么聪明），她也不苟言笑。好吧，更准确地说，她看起来就像你的投影，或者你的投影看起来就像她。你曾经使用一个与你同名的投影，良子心中的大英雄，传奇魔法少女克莱丽丝·冯·罗斯。（其实你哪个都不像。你看起来像一块附着在良子脊柱上的纳米技术肉块。
+良子长得和你一模一样，（只是没那么聪明），她也不苟言笑。好吧，更准确地说，她看起来就像你的投影，或者你的投影看起来就像她。你曾经使用一个与你同名的投影，良子心中的大英雄，传奇魔法少女克莱丽丝·冯·罗斯。（其实你哪个都不像。你看起来像一块附着在良子脊柱上的纳米技术肉块。）
+
+当然你不会介意的。
+你爱着良子，她既像你的母亲，也像你的女儿或是亲生姐妹，她是你能以一种从未梦想过的方式体验生活的另一个自己，但无论如何。你们用同样的眼睛去观察，同样的皮肤去感受，同样的鼻子去嗅探。你深谙她所有的想法和记忆。她属于你，你照顾着她，只有二代战术电脑AI才能做到。
+良子和亚纱美正聊着什么。她知道良子更乐意去执行任务，她也慢慢接受了这一点，尽管因为自己的生活被各种各样的阴谋所打扰，她一直闷闷不乐。良子也开始渐渐为她着想，毕竟良子身上的阴谋也不少，比如你脑子里的那个东西，甚至是你自己。这对他们俩来说是一个很好的磨合机会。因此，你在他们约会的时候尽量保持安静。现在，她们正见泷原市中心的购物中心闲逛，除了杏子之外，没有人知道这儿叫“购物中心”。（你是在她介绍后才查到这个词的。）
+
+不幸的是，你的小姑娘有点不开心。
+挑明了说，克莱丽丝，你的小姑娘就是良子。亚纱美很可爱，人也很好，这就是为什么你一开始就撮合她们两个，就个人来说她永远不会成为你的女朋友。但她永远不会像你和良子那样亲密。{？？？？？？？}
+以目前的情况来看，你还不清楚这一对能不能成。你的小姑娘麻木的无药可救，她一直都这样。
+
+“良子？”亚纱美说着在桌下踢了她一下。“你都没在听我说话！”
+“嗯？”良子回答,她可真不会看气氛。
+亚纱美瞪了你们俩一会。
+“抱歉，只是有些......不对劲，”良子说。
+亚纱美意味深长地喝了口奶昔。“别说了。”
+“不是，真的，我真的有在烦恼。”
+
+“这和你不能与女朋友就我们的关系和困扰她的事情进行正常交流有什么关系吗？”亚纱美质问。
+“......事实上，有关系，”良子还在辩解。
+事实上她说的没错。她的灵魂宝石正闪闪发光，以至于你都能看到亚纱美脸上的反光。亚纱美好像也有些困惑。你准备了一条讯息。
+情况报告
+标准紧急情况
+
+——
+发件人：（战术计算机用户）志筑良子
+收件人：见泷原战术网络
+在当前位置检测到的未知现象。
+这种现象以魔法观测。
+检测与下列来源一致：
+——隐身力场
+——重力畸变
+请求本地传感器数据和主动重力扫描。
+......
+有时候事情发生得太快以至于你都无法理解。在战争时期这是正常现象。做好应对突发情况的准备有助于保持主动和安全；保持敬畏之心同样重要。
+
+只是当事情发生在你头上的时候就没那么有趣了，况且没有任何人类能跟上这样的处理速度。
+所以我做的第一件事就是报告异常情况，你通知女孩们。们已经做了重力分析扫描，所以会马上和我连线。我收到的下一条信息是执政体的通知。应急模式二级，执政体统筹意识，具体说来。他们——它——要求我们留在原地，并告诉我们，我们应该立即在我们的位置等待增援。
+
+增援？亚纱美有点不开心 
+结界师和悲叹之块的传输。但请记住，这一切都是在毫秒内完成的。下一条信息是战术网络运算力的常规分配，只是看起来他们给我们现在的情况分配了地球计算能力的2%。这持续了很长时间，足以质问我们你的贴身保镖都tm在哪儿，并确定我们的联系即将被见泷原市中心那么大的瘴气团所切断。
+
+所以看起来......在低地轨道上，一个没有任何虫洞稳定器的虫洞正在形成，正巧在一位能够处理的魔法少女头顶上，我们正在魔兽孵化地的中心......亚纱美感叹道。
+......这怎么看都像是一个陷阱，良子念话。
+握住亚纱美的手，你悄悄提醒良子。
+“良子！”一个声音传来。
+
+增援？你怀疑道。
+良子转过头去，看见一个熟悉的身影从路另一头径直跑来。
+“......西蒙娜？”良子回想起了她第一次从可疑的魔兽风暴中救出这位女孩。“......还来？”
+这很可疑，很难辨别这是否是真正的西蒙娜，你警告良子，不会吧，西蒙娜也签订契约了？{这段是2017年写的，那时候tts本篇只推进到52章还没有提到西蒙娜签约一事。}
+
+西蒙娜已经变身了，瞬间换上了魔法少女的装束，相当优雅的橙色款式，简洁而又利落。她听到良子的话后一个踉跄停了下来。她盯着良子。“你什么意思，还来？你不会......你不记得上一次了......对吧？”
+良子懵了。“我......我怎么可能忘呢？我签订了契约不是吗？”
+西蒙娜长呼一口气。“对。额。好吧，当我没说，你什么都没听到。听着，我没有时间一五一十地和你解释清楚......”
+
+整幢大楼正在摇晃，好像地震了一样。
+“......好吧，长话短说，”她继续道。“想活命的话就跟我来！”这话总有点似曾相识。当你再次上线的时候马上检查了一下。
+......
+“我不知道！”当你经过一个降落舱的残骸时，亚纱美正惊呼着将一支外星人部队扔向附近的魔兽群中。”如果我们不能从瘴气中传送出去，我们应该试着找到我们能找传送的地方，这样良子就可以到达虫洞，然后关闭它——”
+
+“虫洞是个幌子。魔兽也是个幌子。天哪，整场战争都是幌子。不是从一开始就是这样的，至少从新雅典开始，”西蒙娜坚持道。她正在你前进的过程中，在团队周围投射出一种光环，一道几乎看不见的力场沿着橙色符文构成的闪光排列：某种屏障，但似乎不仅仅是一个常规屏障。”我们很快就会面对真正的敌人。你见到她就知道了，相信我。”
+
+良子在屏障中心。这种情况通常有点让人不安，但今天却尤其糟糕，因为她的主要传送能力不起作用，而且她一半的战斗力都是围绕着这个建立起来的。
+我不关心西蒙娜的话，我们得遵守生存模式守则，保存魔力，直到我们得到更多的悲叹之块或是找到出去的路，你告诉她。
+更多的悲叹之块嘛？她看了看眼前的魔兽，微笑着亮出了手弩。
+
+你本以为事情不会那么糟。
+......
+你们最终跌跌撞撞地到达了希望教总部。
+“杏子呢？”亚纱美问道。
+“她应该在外面打魔兽，”西蒙娜说，“或是外星人，就像这儿的其他人那样。让人恼火，但是这一次万幸的是这儿没有警卫。”
+地下室有个军械库，你对小队说，我们可以找到些悲叹之块。
+
+“没时间了，”西蒙娜抓着良子把她拖进了缎带大厅。用橙色的符文把力场封在门上。
+......
+“什......你不能这么做！”亚纱美惊呼。
+西蒙娜头也不抬，丝毫不在意自己手上流下的鲜血。你甚至都不确定她打碎的玻璃匣子是用何种材料和魔法制成的。她带着痛苦的表情（她是不是用手捏碎了什么？）她灵巧地拿起丝带，系在良子的左手腕上。
+
+“西蒙娜？”良子问道。“以女神之名，你在干什......”
+西蒙娜俯身向前紧紧地抱住她，就好像她害怕放手一样。
+“我会帮你照顾好亚纱美的，”她说，“我会一直保护着她的，好吗？”她在良子脸颊上浅浅一吻。“愿女神保佑你。”
+你有点吃惊。你都没有允许她吻你的姑娘。
+亚纱美脸红透了。
+
+......
+亚纱美脸色又变得煞白，想说什么，却没能说出口。
+缎带大厅里右边的墙上是焰的壁画，画上的她有着白色的翅膀和紫色的闪耀光环，眼神平静。中间的墙上是一个白色雾状的女神形象，有着粉色的头发，摆出一个包容的姿势。左墙上画着黑翼的焰，腐朽的黑色喷薄而出，眼神近乎疯狂。不，这不是画，是真的焰。很容易分辨，因为她翅膀比本人还要可怖。
+
+好吧。别怕，你慌张地安抚良子。
+......
+只剩下了一片混乱。
+......
+良子，良子 。
+她的意识稍有动摇，但基本上仍处于梦境中。你可以辨别，因为梦里有蛋糕。
+良子，醒醒。
+几点了？我该起床了嘛？她一边用叉子戳着糖霜，一边轻率地问道。
+
+虽然这对你来说不重要，但你意识到这是一个你无法回答的问题。你的内部计时器在电磁干扰中失去同步，而且你的连接仍然处于关闭状态。你可以尝试备份协议，只是为了更好的测量。
+等下。有一个网络连接，触动了你体内最古老的遗留协议，一道简单的单向广播时间数据从地球静止轨道的卫星上传来，一个粗糙的，本不应该在这个协议栈中出现的地理定位。而且，它没有任何意义；它完全过时了，它给你的是毫无意义的数据。
+
+哦，好吧，当我没说。
+今天是2011年3月28日，早上7:48左右。
+这似乎引起了她的注意，这比你强迫她醒来要管用多了。现在是什么时候？没开玩笑？她问。
+我不知道，什么东西都断线了，我们可能还在瘴气中，现在我又聋又瞎。你能醒过来好让我们再去拯救一次世界嘛？
+她翻身坐起来，睁开了眼睛。
+
+绿色的草地。晨间的阳光，和7:52的早晨别无二致。绝对不是在瘴气中。缎带还绑在她的左臂上。口袋里还有一打的悲叹之块。
+“我.......我们在哪儿？”她几乎是喊出来的。
+所以我能找到的唯一信号是一个旧的地理定位协议，它根本没用，应该完全过时了，但是大约五颗不同的卫星证实我们在见泷原市中心，现在是早上7点48分。误差不大。有一个闰秒的小整数偏移量，我没有数据可以校准......
+
+“不可能是见泷原啊，”良子咕哝着伸懒腰，环顾四周。”那些高楼呢？”
+一股寒意从良子的脊梁下袭来。你在发抖。这与2011年的见泷原司完全一致......
+搞什么？亚纱美呢？西蒙娜呢？
+良子站起身，打量着周围的环境：一条小溪边怡人而又阴翳的小径。路人正骑着一辆陌生的两轮车低速驶来。他的脸很陌生，显然识别装置不在线，但他看起来和初中生良子本人的年龄差不多。
+
+他打着招呼上前。“早上好啊，志筑桑！”{译者注: 应该是把她当成志筑仁美了}
+良子下意识地挥挥手。
+“课上见！”他说着独自向前骑去。
+克莱丽丝，无助的良子无助地挥手，问道。我们tm该怎么办？
+
 
 <!-- TODO: 请继续修改 -->
