--- a/books/zh-CN/001.md
+++ b/books/zh-CN/001.md
@@ -11,7 +11,7 @@
 良子和亚纱美正聊着什么。她知道良子更乐意去执行任务，她也慢慢接受了这一点，尽管因为自己的生活被各种各样的阴谋所打扰，她一直闷闷不乐。良子也开始渐渐为她着想，毕竟良子身上的阴谋也不少，比如你脑子里的那个东西，甚至是你自己。这对他们俩来说是一个很好的磨合机会。因此，你在他们约会的时候尽量保持安静。现在，她们正见泷原市中心的购物中心闲逛，除了杏子之外，没有人知道这儿叫“购物中心”。（你是在她介绍后才查到这个词的。）
 
 不幸的是，你的小姑娘有点不开心。
-挑明了说，克莱丽丝，你的小姑娘就是良子。亚纱美很可爱，人也很好，这就是为什么你一开始就撮合她们两个，就个人来说她永远不会成为你的女朋友。但她永远不会像你和良子那样亲密。{？？？？？？？}
+挑明了说，克莱丽丝，你的小姑娘就是良子。亚纱美很可爱，人也很好，这就是为什么你一开始就撮合她们两个，就个人来说她永远不会成为你的女朋友。但她永远不会像你和良子那样亲密。
 以目前的情况来看，你还不清楚这一对能不能成。你的小姑娘麻木的无药可救，她一直都这样。
 
 “良子？”亚纱美说着在桌下踢了她一下。“你都没在听我说话！”
@@ -43,7 +43,7 @@
 所以我做的第一件事就是报告异常情况，你通知女孩们。们已经做了重力分析扫描，所以会马上和我连线。我收到的下一条信息是执政体的通知。应急模式二级，执政体统筹意识，具体说来。他们——它——要求我们留在原地，并告诉我们，我们应该立即在我们的位置等待增援。
 
 增援？亚纱美有点不开心 
-结界师和悲叹之块的传输。但请记住，这一切都是在毫秒内完成的。下一条信息是战术网络运算力的常规分配，只是看起来他们给我们现在的情况分配了地球计算能力的2%。这持续了很长时间，足以质问我们你的贴身保镖都tm在哪儿，并确定我们的联系即将被见泷原市中心那么大的瘴气团所切断。
+结界师和悲叹立方的传输。但请记住，这一切都是在毫秒内完成的。下一条信息是战术网络运算力的常规分配，只是看起来他们给我们现在的情况分配了地球计算能力的2%。这持续了很长时间，足以质问我们你的贴身保镖都tm在哪儿，并确定我们的联系即将被见泷原市中心那么大的瘴气团所切断。
 
 所以看起来......在低地轨道上，一个没有任何虫洞稳定器的虫洞正在形成，正巧在一位能够处理的魔法少女头顶上，我们正在魔兽孵化地的中心......亚纱美感叹道。
 ......这怎么看都像是一个陷阱，良子念话。
@@ -67,15 +67,15 @@
 “虫洞是个幌子。魔兽也是个幌子。天哪，整场战争都是幌子。不是从一开始就是这样的，至少从新雅典开始，”西蒙娜坚持道。她正在你前进的过程中，在团队周围投射出一种光环，一道几乎看不见的力场沿着橙色符文构成的闪光排列：某种屏障，但似乎不仅仅是一个常规屏障。”我们很快就会面对真正的敌人。你见到她就知道了，相信我。”
 
 良子在屏障中心。这种情况通常有点让人不安，但今天却尤其糟糕，因为她的主要传送能力不起作用，而且她一半的战斗力都是围绕着这个建立起来的。
-我不关心西蒙娜的话，我们得遵守生存模式守则，保存魔力，直到我们得到更多的悲叹之块或是找到出去的路，你告诉她。
-更多的悲叹之块嘛？她看了看眼前的魔兽，微笑着亮出了手弩。
+我不关心西蒙娜的话，我们得遵守生存模式守则，保存魔力，直到我们得到更多的悲叹立方或是找到出去的路，你告诉她。
+更多的悲叹立方嘛？她看了看眼前的魔兽，微笑着亮出了手弩。
 
 你本以为事情不会那么糟。
 ......
 你们最终跌跌撞撞地到达了希望教总部。
 “杏子呢？”亚纱美问道。
 “她应该在外面打魔兽，”西蒙娜说，“或是外星人，就像这儿的其他人那样。让人恼火，但是这一次万幸的是这儿没有警卫。”
-地下室有个军械库，你对小队说，我们可以找到些悲叹之块。
+地下室有个军械库，你对小队说，我们可以找到些悲叹立方。
 
 “没时间了，”西蒙娜抓着良子把她拖进了缎带大厅。用橙色的符文把力场封在门上。
 ......
@@ -110,7 +110,7 @@
 我不知道，什么东西都断线了，我们可能还在瘴气中，现在我又聋又瞎。你能醒过来好让我们再去拯救一次世界嘛？
 她翻身坐起来，睁开了眼睛。
 
-绿色的草地。晨间的阳光，和7:52的早晨别无二致。绝对不是在瘴气中。缎带还绑在她的左臂上。口袋里还有一打的悲叹之块。
+绿色的草地。晨间的阳光，和7:52的早晨别无二致。绝对不是在瘴气中。缎带还绑在她的左臂上。口袋里还有一打的悲叹立方。
 “我.......我们在哪儿？”她几乎是喊出来的。
 所以我能找到的唯一信号是一个旧的地理定位协议，它根本没用，应该完全过时了，但是大约五颗不同的卫星证实我们在见泷原市中心，现在是早上7点48分。误差不大。有一个闰秒的小整数偏移量，我没有数据可以校准......
 
